@@ -1,4 +1,8 @@
-﻿drkns 02.01.2014 18:06:05 +0200 - build 3754
+﻿drkns 03.01.2014 04:00:21 +0200 - build 3755
+
+1. "Восстановим" кастомные режимы сортировки.
+
+drkns 02.01.2014 18:06:05 +0200 - build 3754
 
 1. Оптимизация перемещения внутренних классов.
 
